# test-projects

./: README.md
Static/: .gitignore  CMakeLists.txt  READ.txt
Static/include/: core.h
Static/src/: main.c
Static/src/web/: index.html
Static/tools/: linux-toolchain.cmake
static/: .clang-format  Makefile
static/tools/: wasm-toolchain.cmake  windows-toolchain.cmake
